fixed issue regarding text wrap in About

--- a/Main/index.html
+++ b/Main/index.html
@@ -36,27 +36,42 @@
                 class="about">
             <h2>About</h2>
             <p>
-                I am r134x7 also known as ggx2ac, I am currently studying via online coding bootcamp 
-                to gain programming skills and to build my portfolio so that I can find a career in 
-                web development. My educational background is a Bachelor of Science with a double major
-                in Physics and, Financial Mathematics and Statistics.  
-                <br> <br>
-                My programming experience during University 
-                consisted of: learning Matlab for scientific applications and R language for 
-                applying statistics. After University, I learned Java (self-taught) to display finacial data
-                in code printed format. I then taught myself Python to build new code for that same data because
-                the Java IDE mobile app I was using no longer worked and there was no satisfactory replacement.
+                I am r134x7 also known as ggx2ac, I am currently studying via<br> 
+                online coding bootcamp to gain programming skills and to build <br>
+                my portfolio so that I can find a career in web development.<br>
+                My educational background is a Bachelor of Science with a double major<br>
+                in Physics and, Financial Mathematics and Statistics. <br> 
+                <br>
+                My programming experience during University consisted of:<br>
+                learning Matlab for scientific applications and R language for<br>
+                applying statistics. After University, I learned Java (self-taught)<br>
+                to display finacial data in code printed format. I then taught myself<br>
+                Python to build new code for that same data because the Java IDE mobile<br>
+                app I was using no longer worked and there was no satisfactory replacement.<br>
             </p>
         </section>
         <section 
                  id="works1" 
                  class="works">
-            <!-- <img 
-                 src="./assets/images/online-reputation-management.jpg" 
-                 class="float-right" 
-                 alt="A person holding his phone while looking at a laptop 
-                      that has a bar graph with the title 'Reputation'" /> -->
             <h3>Works</h3>
+            <div id="worksimg1">
+                <img 
+                 src="./assets/a3.png"  
+                 alt="A person holding his phone while looking at a laptop 
+                      that has a bar graph with the title 'Reputation'" />
+            </div>
+            <div id="worksimg2">
+                <img 
+                 src="./assets/a2.png"  
+                 alt="A person holding his phone while looking at a laptop 
+                      that has a bar graph with the title 'Reputation'" />
+            </div>
+            <div id="worksimg3">
+                <img 
+                 src="./assets/a2.png"  
+                 alt="A person holding his phone while looking at a laptop 
+                      that has a bar graph with the title 'Reputation'" />
+            </div>
             <!-- <p>
                 blahblahblahblahblahblah blahblahblahblahblahblah blahblahblahblahblahblah
             </p> -->
