Added videos section and placeholder images

--- a/Main/index.html
+++ b/Main/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
+  <title>r134x7 Portfolio</title>
   <link rel="stylesheet" href="assets/reset.css" />
   <link rel="stylesheet" href="assets/style.css" />
 </head>
@@ -23,6 +23,9 @@
                     <a href="#works1">works</a>
                 </li>
                 <li>
+                    <a href="#videos1">videos</a>
+                </li>
+                <li>
                     <a href="#contact1">contact me</a>
                 </li>
             </ul>
@@ -36,9 +39,9 @@
                 class="about">
             <h2>About</h2>
             <p>
-                I am r134x7 also known as ggx2ac, I am currently studying via<br> 
-                online coding bootcamp to gain programming skills and to build <br>
-                my portfolio so that I can find a career in web development.<br>
+                I am Github user r134x7 also known as ggx2ac in some places, I am currently<br> 
+                studying via online coding bootcamp to gain programming skills<br>
+                and to build my portfolio so that I can find a career in web development.<br>
                 My educational background is a Bachelor of Science with a double major<br>
                 in Physics and, Financial Mathematics and Statistics. <br> 
                 <br>
@@ -54,32 +57,36 @@
                  id="works1" 
                  class="works">
             <h3>Works</h3>
-            <div id="worksimg1">
-                <img 
+                <img id="worksimg1" 
                  src="./assets/a3.png"  
-                 alt="A person holding his phone while looking at a laptop 
-                      that has a bar graph with the title 'Reputation'" />
-            </div>
-            <div id="worksimg2">
-                <img 
+                 alt="Placeholder" />
+                <img id="worksimg2"
                  src="./assets/a2.png"  
-                 alt="A person holding his phone while looking at a laptop 
-                      that has a bar graph with the title 'Reputation'" />
-            </div>
-            <div id="worksimg3">
-                <img 
+                 alt="Placeholder" />
+                <img id="worksimg3" 
                  src="./assets/a2.png"  
-                 alt="A person holding his phone while looking at a laptop 
-                      that has a bar graph with the title 'Reputation'" />
-            </div>
-            <!-- <p>
-                blahblahblahblahblahblah blahblahblahblahblahblah blahblahblahblahblahblah
-            </p> -->
+                 alt="Placeholder" />
+                 <img id="worksimg4" 
+                 src="./assets/a2.png"  
+                 alt="Placeholder" />
+                 <img id="worksimg5" 
+                 src="./assets/a2.png"  
+                 alt="Placeholder" />
+        </section>
+        <section 
+                 id="videos1" 
+                 class="videos">
+            <h4>Videos</h4>
+            <a href="https://www.youtube.com/watch?v=BelfE5AxQwA&list=PLlia8-4etXyj1IYCN7OISVf63YJuZQi3w">
+                <img id="videoimg1" 
+                 src="./assets/a3.png"  
+                 alt="Link to youtube video" />
+            </a>
         </section>
         <section 
                  id="contact1" 
                  class="contact">
-            <h4>Contact Me</h4>
+            <h5>Contact Me</h5>
             <nav>
                 <ul>
                     <li>
