Moved index to root otherwise default page is readme

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>r134x7 Portfolio</title>
-  <link rel="stylesheet" href="assets/reset.css" />
-  <link rel="stylesheet" href="assets/style.css" />
+  <link rel="stylesheet" href="Main\assets\reset.css" />
+  <link rel="stylesheet" href="Main\assets\style.css" />
 </head>
 
 <body>
@@ -58,19 +58,19 @@
                  class="works">
             <h3>Works</h3>
                 <img id="worksimg1" 
-                 src="./assets/a3.png"  
+                 src="Main\assets\a3.png"  
                  alt="Placeholder" />
                 <img id="worksimg2"
-                 src="./assets/a2.png"  
+                 src="Main\assets\a2.png"  
                  alt="Placeholder" />
                 <img id="worksimg3" 
-                 src="./assets/a2.png"  
+                 src="Main\assets\a2.png"  
                  alt="Placeholder" />
                  <img id="worksimg4" 
-                 src="./assets/a2.png"  
+                 src="Main\assets\a2.png"  
                  alt="Placeholder" />
                  <img id="worksimg5" 
-                 src="./assets/a2.png"  
+                 src="Main\assets\a2.png"  
                  alt="Placeholder" />
         </section>
         <section 
@@ -79,7 +79,7 @@
             <h4>Videos</h4>
             <a href="https://www.youtube.com/watch?v=BelfE5AxQwA&list=PLlia8-4etXyj1IYCN7OISVf63YJuZQi3w">
                 <img id="videoimg1" 
-                 src="./assets/a3.png"  
+                 src="Main\assets\a3.png"  
                  alt="Link to youtube video" />
             </a>
         </section>
