Added recent avatars and changed an image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
   <header>
-        <h1>r134x7</h1>
+        <h1>r134x7</h1>        
         <nav>
             <ul>
                 <li>
@@ -33,7 +33,13 @@
   </header>
 
   <main class="content">
-      <div class="pulse" ></div>
+    
+                <img id="c2" 
+                 src="Main\assets\c2.png"  
+                 alt="Bandai Namco - They publish Dark Souls" />
+                 <img id="c1" 
+                    src="Main\assets\c1.png"  
+                    alt="ggx2ac avatar" />
         <section 
                 id="about1"
                 class="about">
@@ -79,7 +85,7 @@
             <h4>Videos</h4>
             <a href="https://www.youtube.com/watch?v=BelfE5AxQwA&list=PLlia8-4etXyj1IYCN7OISVf63YJuZQi3w">
                 <img id="videoimg1" 
-                 src="Main\assets\a3.png"  
+                 src="Main\assets\b1.png"  
                  alt="Link to youtube video" />
             </a>
         </section>
@@ -90,7 +96,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#">Linkedin</a>
+                        <a href="#">LinkedIn</a>
                     </li>
                     <li>
                         <a href="https://github.com/r134x7">Github</a>
