Somehow got works images to resize using anchor tags

--- a/index.html
+++ b/index.html
@@ -63,21 +63,31 @@
                  id="works1" 
                  class="works">
             <h3>Works</h3>
+            <a href="https://github.com/r134x7">
                 <img id="worksimg1" 
                  src="Main\assets\a3.png"  
                  alt="Placeholder" />
+            </a>
+            <a href="https://github.com/r134x7">
                 <img id="worksimg2"
                  src="Main\assets\a2.png"  
                  alt="Placeholder" />
+            </a>
+            <a href="https://github.com/r134x7">
                 <img id="worksimg3" 
                  src="Main\assets\a2.png"  
                  alt="Placeholder" />
+            </a>
+            <a href="https://github.com/r134x7">
                  <img id="worksimg4" 
                  src="Main\assets\a2.png"  
                  alt="Placeholder" />
+            </a>
+            <a href="https://github.com/r134x7">
                  <img id="worksimg5" 
                  src="Main\assets\a2.png"  
                  alt="Placeholder" />
+            </a>
         </section>
         <section 
                  id="videos1" 
