Changed a1 image, added comments to html and CSS stylesheet

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>r134x7 Portfolio</title>
+  <!-- CSS reset settings taken from bootcamp CSS cheatsheet reset file -->
   <link rel="stylesheet" href="Main\assets\reset.css" />
   <link rel="stylesheet" href="Main\assets\style.css" />
 </head>
 
+<!-- Structure of html taken from https://github.com/r134x7/HW01-Code-Refactor -->
 <body>
-
-
   <header>
         <h1>r134x7</h1>        
         <nav>
@@ -65,8 +65,8 @@
             <h3>Works</h3>
             <a href="https://github.com/r134x7">
                 <img id="worksimg1" 
-                 src="Main\assets\a3.png"  
-                 alt="Placeholder" />
+                 src="Main\assets\a1.png"  
+                 alt="Nintendo earnings data in Python" />
             </a>
             <a href="https://github.com/r134x7">
                 <img id="worksimg2"
