updated first works link

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                  id="works1" 
                  class="works">
             <h3>Works</h3>
-            <a href="https://github.com/r134x7">
+            <a href="https://github.com/r134x7/nintendo-earnings-data-python">
                 <img id="worksimg1" 
                  src="Main\assets\a1.png"  
                  alt="Nintendo earnings data in Python" />
