--- a/index.html
+++ b/index.html
@@ -68,20 +68,20 @@
                  src="Main\assets\a1.png"  
                  alt="Nintendo earnings data in Python" />
             </a>
-            <a href="https://github.com/r134x7">
+            <a href="https://github.com/r134x7/Rotten-Thesaurus-fork">
                 <img id="worksimg2"
-                 src="Main\assets\a2.png"  
-                 alt="Placeholder" />
+                 src="Main\assets\ab1.jpg"  
+                 alt="Rotten Thesaurus" />
             </a>
-            <a href="https://github.com/r134x7">
+            <a href="https://github.com/r134x7/HW03-JavaScript-Password-Generator">
                 <img id="worksimg3" 
-                 src="Main\assets\a2.png"  
-                 alt="Placeholder" />
+                 src="Main\assets\rd1b.jpg"  
+                 alt="Password Generator" />
             </a>
-            <a href="https://github.com/r134x7">
+            <a href="https://github.com/r134x7/HW06-ServerSideAPIs-Weather-Dashboard">
                  <img id="worksimg4" 
-                 src="Main\assets\a2.png"  
-                 alt="Placeholder" />
+                 src="Main\assets\rd4b.png"  
+                 alt="Weather Dashboard" />
             </a>
             <a href="https://github.com/r134x7">
                  <img id="worksimg5" 
@@ -105,9 +105,6 @@
             <h5>Contact Me</h5>
             <nav>
                 <ul>
-                    <li>
-                        <a href="#">LinkedIn</a>
-                    </li>
                     <li>
                         <a href="https://github.com/r134x7">Github</a>
                     </li>
