added info, added media queries

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 id="about1"
                 class="about">
             <h2>About</h2>
-            <p>
+            <p id="about2">
                 I am Github user r134x7 also known as ggx2ac in some places, I am currently<br> 
                 studying via online coding bootcamp to gain programming skills<br>
                 and to build my portfolio so that I can find a career in web development.<br>
@@ -57,16 +57,18 @@
                 to display finacial data in code printed format. I then taught myself<br>
                 Python to build new code for that same data because the Java IDE mobile<br>
                 app I was using no longer worked and there was no satisfactory replacement.<br>
+                To contact me for my resume, go to my Github profile for my contact details<br>
+                which is found in the "contact me" section below.<br>
             </p>
         </section>
         <section 
                  id="works1" 
                  class="works">
             <h3>Works</h3>
-            <a href="https://github.com/r134x7/nintendo-earnings-data-python">
+            <a href="https://github.com/r134x7/nintendo-earnings-data-and-other-video-game-companies">
                 <img id="worksimg1" 
                  src="Main\assets\a1.png"  
-                 alt="Nintendo earnings data in Python" />
+                 alt="Nintendo earnings data and other video game companies" />
             </a>
             <a href="https://github.com/r134x7/Rotten-Thesaurus-fork">
                 <img id="worksimg2"
