--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h2>About</h2>
             <p id="about2">
                 I am Github user r134x7 also known as ggx2ac in some places, I am currently<br> 
-                studying via online coding bootcamp to gain programming skills<br>
+                studying full-stack web development via coding bootcamp to gain programming skills<br>
                 and to build my portfolio so that I can find a career in web development.<br>
                 My educational background is a Bachelor of Science with a double major<br>
                 in Physics and, Financial Mathematics and Statistics. <br> 
@@ -70,25 +70,45 @@
                  src="Main\assets\a1.png"  
                  alt="Nintendo earnings data and other video game companies" />
             </a>
-            <a href="https://github.com/r134x7/Rotten-Thesaurus-fork">
+            <a href="https://quiet-reaches-87273.herokuapp.com/">
                 <img id="worksimg2"
-                 src="Main\assets\ab1.jpg"  
-                 alt="Rotten Thesaurus" />
+                 src="Main\assets\dapp2.png"  
+                 alt="Running Tracks deployed app" />
+            </a>
+            <a href="https://github.com/r134x7/RunningTracks">
+                <img id="worksimg2"
+                 src="Main\assets\repo2.png"  
+                 alt="Running Tracks repo" />
+            </a>
+            <a href="https://immense-brushlands-18787.herokuapp.com/">
+                <img id="worksimg2"
+                 src="Main\assets\dapp1.png"  
+                 alt="milktoast techBlog deployed app" />
+            </a>
+            <a href="https://github.com/r134x7/milktoast-techBlog">
+                <img id="worksimg2"
+                 src="Main\assets\repo3.png"  
+                 alt="milktoast techBlog repo" />
+            </a>
+            <a href="https://r134x7.github.io/HW06-ServerSideAPIs-Weather-Dashboard/">
+                <img id="worksimg4" 
+                src="Main\assets\rd4b.png"  
+                alt="Weather Dashboard deployed app" />
+            </a>
+            <a href="https://github.com/r134x7/HW06-ServerSideAPIs-Weather-Dashboard">
+                <img id="worksimg4" 
+                src="Main\assets\rd4c.png"  
+                alt="Weather Dashboard repo" />
+            </a>
+            <a href="https://r134x7.github.io/HW03-JavaScript-Password-Generator/">
+                <img id="worksimg3" 
+                src="Main\assets\rd1b.jpg"  
+                alt="Password Generator deployed app" />
             </a>
             <a href="https://github.com/r134x7/HW03-JavaScript-Password-Generator">
                 <img id="worksimg3" 
-                 src="Main\assets\rd1b.jpg"  
-                 alt="Password Generator" />
-            </a>
-            <a href="https://github.com/r134x7/HW06-ServerSideAPIs-Weather-Dashboard">
-                 <img id="worksimg4" 
-                 src="Main\assets\rd4b.png"  
-                 alt="Weather Dashboard" />
-            </a>
-            <a href="https://github.com/r134x7">
-                 <img id="worksimg5" 
-                 src="Main\assets\a2.png"  
-                 alt="Placeholder" />
+                 src="Main\assets\repo1.png"  
+                 alt="Password Generator repo" />
             </a>
         </section>
         <section 
